Update second-hand platform with transaction system and code cleanup
- Added transaction system with complete workflow
- Added new transaction controller, DTOs, and services
- Updated chat system components
- Cleaned up documentation and test files
- Added comprehensive API documentation